--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body>
   <!-- Loader -->
-  <!-- <div class="loader-wrapper">
+  <div class="loader-wrapper">
     <span class="loader"></span>
-  </div> -->
+  </div>
 
   <!-- Header Start -->
   <header>
